# Meta_PyTorch_OpenEnv_Hackathon

./: .env.example  .gitattributes  .gitignore  AUDIT_AND_GAP_PLAN.md  Dockerfile  FINAL_STATUS.md  PROJECT_DOCUMENTATION.md  README.md  TEST_REPORT.md  app.py  colab_notebook.ipynb  colab_train.py  compare.py  demo.py  evaluate.py  generate_plots.py  grader_easy.py  grader_hard.py  grader_medium.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_action_reduction.py  test_env.py  train.py  train_curriculum.py  train_final.py  train_grpo.py  train_marl.py  train_selfplay.py  verify_sim.py
agents/: __init__.py  baseline.py  fleet_agent.py  greedy_agent.py  oracle.py  oversight_agent.py  priority_agent.py  repositioning_oracle.py
docs/: hf_blog_post.md
env/: __init__.py  environment.py  models.py  simulator.py
evaluation/: auto_evaluator.py  report.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
long_horizon/: __init__.py  curriculum_manager.py  episode_planner.py  history_encoder.py  long_horizon_env.py
multi_agent/: ambulance_agent.py  coordinator.py  dispatcher_agent.py  planner.py
notebooks/: Ambulance_GRPO_Training.ipynb  grpo_colab.ipynb  run_analysis.py  trl_colab_minimal.ipynb
rl/: action_mapper.py  action_mask.py  demand_predictor.py  dqn.py  prioritized_replay_buffer.py  replay_buffer.py  rl_agent.py  rubric.py  state_encoder.py
self_improvement/: adversarial_generator.py  expert_agent.py  performance_analyzer.py  self_play_trainer.py  strategy_adapter.py  weakness_detector.py
server/: app.py  (+1 more)
(+25 files in other folders)
